Funciones revisadas con la clase del profe

--- a/GradEstocDes.ipynb
+++ b/GradEstocDes.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,8 +464,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Función utilizada:\n",
+    "\n",
+    "Select $i \\in {1,...,n}$ at random:\n",
+    "\n",
+    "$\\theta \\leftarrow \\theta-\\eta_t \\Delta_{\\theta} \\left[ Loss_h (y^{(i)} \\theta  \\dot x^{(i)} + \\frac{\\lambda}{2} ||\\theta|| \\right] $\n",
+    "\n",
+    "Y de acuerdo a la clase:\n",
+    "\n",
+    "$\\theta^t \\leftarrow \\theta^{t+1}-\\eta_t \\begin{bmatrix}\n",
+    "y_i x_i\\:\\:\\: < 1\\\\\n",
+    "0 \\:\\:\\: otro\\:caso\n",
+    "\\end{bmatrix} + \\lambda \\theta$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +492,7 @@
     "    y_len = len(y) # \n",
     "    \n",
     "    \n",
-    "    def f_perdida(theta,x,y):\n",
+    "    def f_perdida(theta,x,y):  # De acuerdo a la clase:\n",
     "        if (np.dot(theta,x.T)*y)<1:\n",
     "            return -1\n",
     "        else:\n",
@@ -485,23 +503,24 @@
     "        rand_int = np.random.randint(0,y_len) # elige el dato al azar entre cero y y_len\n",
     "        x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
     "        y_i=y[rand_int].reshape(1,1)\n",
-    "        theta=theta-(eta)*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb/2)*np.linalg.norm(theta)**2)\n",
+    "        #theta=theta-(1/(j+1))*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb)*theta)\n",
+    "        theta=theta-(1/(j+1))*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb/2)*np.linalg.norm(theta)**2)\n",
     "        \n",
     "    return theta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.14928686, 0.10211039, 0.0432176 , 0.00687095]])"
+       "array([[0.76835279, 0.51139798, 0.22982494, 0.04087251]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,40 +531,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "gde()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f_perdida(theta,x,y):\n",
-    "    if (np.dot(theta,x.T)*y)<1:\n",
-    "        return -1\n",
-    "    else:\n",
-    "        return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rand_int = np.random.randint(0,80) # elige el dato al azar entre cero y y_len\n",
-    "x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
-    "y_i=y[rand_int].reshape(1,1)"
+    "rand_int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.4, 3.2, 5.3, 2.3]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
+    "x_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_i=y[rand_int].reshape(1,1)\n",
+    "y_i=-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +592,7 @@
        "-1"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
