--- a/StochasticGD_CrossValidation.ipynb
+++ b/StochasticGD_CrossValidation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def costo(data, n, theta, lamb):\n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    def Lh(theta,x,y):  # De acuerdo a la clase:\n",
     "        v = np.dot(theta,x.T)*y\n",
     "        if (v)<1:\n",
@@ -112,7 +109,7 @@
    "source": [
     "Para $i \\in {1,...,n}$ aleatoria:\n",
     "\n",
-    "$\\theta \\leftarrow \\theta-\\eta_t \\Delta_{\\theta} \\left[ Loss_h (y^{(i)} \\theta  \\dot x^{(i)} + \\frac{\\lambda}{2} ||\\theta|| \\right] $\n",
+    "$\\theta \\leftarrow \\theta-\\eta_t \\Delta_{\\theta} \\left[ Loss_h (y^{(i)} \\theta  * x^{(i)}) + \\frac{\\lambda}{2} ||\\theta||^2 \\right] $\n",
     "\n",
     "\n",
     "Y de acuerdo a la clase:\n",
@@ -129,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +147,8 @@
     "        rand_int = np.random.randint(0,y_len) # elige el dato al azar entre cero y y_len\n",
     "        x_i=x[rand_int,:].reshape(1,x.shape[1])\n",
     "        y_i=y[rand_int].reshape(1,1)\n",
-    "        #theta=theta-(1/(j+1))*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb)*theta)\n",
-    "        theta=theta-(1/(j+1))*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb/2)*np.linalg.norm(theta)**2)\n",
+    "        theta=theta-(1/(j+1))*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb)*theta)\n",
+    "        #theta=theta-(1/(j+1))*y_i@x_i*(f_perdida(theta,x_i,y_i)+(lamb/2)*np.linalg.norm(theta)**2)\n",
     "        \n",
     "    return theta"
    ]
@@ -165,18 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "random.seed(1993)\n",
     "\n",
     "def CrossValidation(data,K):\n",
-    "    lamda_list = [1,0.01,0.001]\n",
-    "    #eta = 0.01 # LearningRate\n",
+    "    lamda_list = [100,10,1,0.01,0.001]\n",
     "    iteraciones = 1000\n",
-    "    #df_lamda = pd.DataFrame(0.0, index=range(1),columns=(\"100\",\"10\",\"1\",\"0.1\"))\n",
-    "    df_lamda = pd.DataFrame(0.0, index=range(1),columns=(\"1\",\"0.01\",\"0.001\"))\n",
+    "    df_lamda = pd.DataFrame(0.0, index=range(1),columns=(\"100\",\"10\",\"1\",\"0.01\",\"0.001\"))\n",
     "    \n",
     "    # Dividimos los datos en chunk de igual tamaño\n",
     "    chunks = np.array_split(data, K)\n",
@@ -218,32 +213,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/carotova/.pyenv/versions/3.7.4/envs/machine-learning/lib/python3.7/site-packages/ipykernel_launcher.py:6: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     1      0.01     0.001\n",
-      "0  inf  0.674257  0.686069\n"
+      "             100        10         1      0.01     0.001\n",
+      "0  2.670548e+221  0.527361  0.126095  0.899393  0.087137\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.01"
+       "0.001"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,35 +255,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Se revuelven los datos\n",
+    "random.seed(1992)\n",
+    "random.shuffle(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Datos de entrenamiento\n",
+    "datos_entrenamiento = data[0:120]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Datos de verificación\n",
+    "data_validacion = data[121:150]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = np.array([0.0, 0.0, 0.0, 0.0])\n",
+    "iteraciones = 1000\n",
+    "lam = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Teta :  [-0.08831484 -0.83909116  3.31222094  1.0967151 ]\n"
+      "Theta :  [0.09508066 0.09507849 0.11068047 0.18189349]\n"
      ]
     }
    ],
    "source": [
-    "#Se revuelven los datos\n",
-    "random.seed(1992)\n",
-    "random.shuffle(data)\n",
-    "\n",
-    "#Datos de entrenamiento\n",
-    "datos_entrenamiento = data[0:120]\n",
-    "\n",
-    "#Datos de verificación\n",
-    "data_validacion = data[121:150]\n",
-    "\n",
-    "\n",
-    "theta = np.array([0.0, 0.0, 0.0, 0.0])\n",
-    "iteraciones = 1000\n",
-    "lam = 0.01\n",
-    "\n",
     "theta_est = sgd(data_validacion, theta, lam, iteraciones)\n",
-    "print(\"Teta : \", theta_est[0])"
+    "print(\"Theta : \", theta_est[0])"
    ]
   }
  ],
@@ -316,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
